--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "totallyMoneyTechTest",
+  "name": "totallymoneytechtest",
   "version": "1.0.0",
   "description": "## Challenge: Implement a Customer preference Centre",
   "main": "test.js",
@@ -21,6 +21,12 @@
   },
   "homepage": "https://github.com/kealanheena/totallyMoneyTechTest#readme",
   "devDependencies": {
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@types/jest": "^26.0.14",
+    "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0"
   }
 }
